# read-sap-odata-catalog

./: .gitignore  Cargo.toml  README.md  build.rs
html/: error.html  index.html
odata/: catalogservice.xml
src/: main.rs  unit_tests.rs
src/auth/: mod.rs
test_data/: Annotations.xml  CatalogCollection.xml  EntitySetCollection.xml  ServiceCollection.xml  TagCollection.xml
